# RiveQtQuickPlugin2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: RiveThirdParty.cmake  generate_rive_shaders.py
examples/audio/: CMakeLists.txt  Main.qml  main.cpp
examples/common/: exampleappsupport.cpp
patches/: rive-runtime-eglfs.patch  rive-runtime-gl-atomic-image-uniforms.patch
scripts/: bootstrap.py
src/RiveQtQuick/: CMakeLists.txt  riveitem.cpp  riveitem.h
src/RiveQtQuick/private/: qtglprocaddress.cpp  qtglprocaddress.h  rivefileassetloader.cpp  riveglbridge.cpp  riveglbridge.h  rivelogging.cpp  rivelogging.h  riverendernode.cpp
src/RiveQtQuick/private/qpainter/: qpainterrivepath.h
src/RiveQtQuick/private/rendering/: rived3d12bridge.cpp  riveglbridge.cpp  riveimagetexture.h  rivemetalbridge.h  rivemetalbridge.mm  rivevulkanbridge.cpp
src/RiveQtQuick/private/rendering/qpainter/: qpainterrivepaint.cpp  qpainterrivepath.cpp  qpainterriverenderer.cpp
tests/assets/: manifest.json
tests/assets/rive/: 26986-50750-scripted-audio-play-stop-volume.riv
tests/qml/: CMakeLists.txt  test_qml_imports.cpp
